# axum_server

./: Cargo.toml  LICENSE
migrations/: 20260422113608_users.down.sql  20260422113608_users.up.sql  20260422113711_posts.down.sql  20260422113711_posts.up.sql
src/: main.rs
src/core/: app.rs  errors.rs  middleware.rs  mod.rs  state.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/logging/: mod.rs
src/modules/user/: mod.rs  routes.rs
src/modules/user/handlers/: mod.rs
src/modules/user/models/: mod.rs
src/modules/user/models.rs/: mod.rs
src/modules/user/repository/: mod.rs
src/modules/user/services/: mod.rs
